clean up repository

--- a/Sistercell_Analysis_Template.ipynb
+++ b/Sistercell_Analysis_Template.ipynb
@@ -46,14 +46,14 @@
     "# define directory for datafiles and generate data object\n",
     "\n",
     "datadir   = '/home/lukas/projects/sistercells/experiments/SISTERS-NONSISTERS/SISTERS/'\n",
-    "datafiles = glob.glob(datadir)\n",
+    "datafiles = glob.glob(datadir + '*.xls') # get list of all files that match pattern = all Excel files in 'datadir'\n",
     "\n",
     "data      = scc.SisterCellData(infiles = datafiles, debugmode = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
