--- a/Sistercell_Analysis_Template.ipynb
+++ b/Sistercell_Analysis_Template.ipynb
@@ -48,7 +48,7 @@
     "datadir   = '/home/lukas/projects/sistercells/experiments/SISTERS-NONSISTERS/SISTERS/'\n",
     "datafiles = glob.glob(datadir + '*.xls') # get list of all files that match pattern = all Excel files in 'datadir'\n",
     "\n",
-    "data      = scc.SisterCellData(infiles = datafiles, debugmode = False)"
+    "data      = scc.SisterCellData(infiles = datafiles)"
    ]
   },
   {
