externalize dynamics class

--- a/ARP_analysis.ipynb
+++ b/ARP_analysis.ipynb
@@ -13,6 +13,8 @@
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
     "\n",
+    "import arpclass as arpc\n",
+    "\n",
     "%matplotlib inline\n",
     "matplotlib.rcParams['figure.figsize'] = [12,8]\n",
     "matplotlib.rc('font',family='Monospace')"
@@ -22,127 +24,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MDARP(object):\n",
-    "    \"\"\"\n",
-    "    multi-dimensional autoregressive process with several noise terms\n",
-    "    \"\"\"\n",
-    "    def __init__(self,**kwargs):\n",
-    "        # construct matrix A from eigenvalues and angle (0...1) between eigenvectors, assume first direction is (0,1)\n",
-    "        self.__A_eigval    = np.array([self.interval(x) for x in kwargs.get('eigval',[0.9,0.5])],dtype=np.float)\n",
-    "        self.__A_angle     = self.interval(kwargs.get('A_angle',0.33)) # angles between 0 .. 1\n",
-    "        evec1              = np.array([0,1],dtype=np.float)\n",
-    "        evec2              = np.dot(self.rotation(self.__A_angle),evec1)\n",
-    "        self.__A_eigvec    = (evec1 / np.linalg.norm(evec1), evec2 / np.linalg.norm(evec2))\n",
-    "        evmat              = np.array(self.__A_eigvec,dtype=float).T\n",
-    "        self.A             = np.matmul(np.matmul(evmat,np.diag(self.__A_eigval)), np.linalg.inv(evmat))\n",
-    "        \n",
-    "        # projection vector is also with respect to first EVec\n",
-    "        self.__alpha_angle = self.interval(kwargs.get('alpha_angle',0.67))\n",
-    "        self.alpha         = np.dot(self.rotation(self.__alpha_angle),evec1)\n",
-    "\n",
-    "        # noise, env\n",
-    "        self.noiseamplitudes = np.array(kwargs.get('noiseamplitudes',[1/np.sqrt(2.),1/np.sqrt(2.)]),dtype=np.float)\n",
-    "\n",
-    "        self.experimenttype = kwargs.get('experimenttype','sisters')\n",
-    "        self.default_steps  = kwargs.get('steps',10)\n",
-    "        \n",
-    "        # initialize all dynamical variables to start\n",
-    "        self.reset()\n",
-    "\n",
-    "\n",
-    "    def random(self,mean = 0, sqrt_var = 1):\n",
-    "        return np.random.normal(loc = mean, scale = sqrt_var, size=2)\n",
-    "\n",
-    "\n",
-    "    def step(self):\n",
-    "        # noiseamplitudes = noise 0, env 1\n",
-    "        noiseA          = self.noiseamplitudes[0] * self.random()\n",
-    "        noiseB          = self.noiseamplitudes[0] * self.random()\n",
-    "        if self.experimenttype == 'sisters' or self.experimenttype == 'nonsisters':\n",
-    "            xiE         = self.random()\n",
-    "            noiseA     += self.noiseamplitudes[1] * xiE\n",
-    "            noiseB     += self.noiseamplitudes[1] * xiE\n",
-    "        else:\n",
-    "            noiseA     += self.noiseamplitudes[1] * self.random()\n",
-    "            noiseB     += self.noiseamplitudes[1] * self.random()\n",
-    "\n",
-    "        xA_new = np.dot(self.A,self.xA[-1]) + noiseA\n",
-    "        xB_new = np.dot(self.A,self.xB[-1]) + noiseB\n",
-    "        \n",
-    "        self.xA = np.vstack((self.xA,[xA_new]))\n",
-    "        self.xB = np.vstack((self.xB,[xB_new]))\n",
-    "        \n",
-    "        self.__current_generation += 1\n",
-    "        \n",
-    "        return xA_new, xB_new\n",
-    "\n",
-    "    def reset(self):\n",
-    "        self.__current_generation = 0\n",
-    "        if self.experimenttype == 'sisters':\n",
-    "            start   = self.random()\n",
-    "            self.xA = np.array([start])\n",
-    "            self.xB = np.array([start])\n",
-    "        else:\n",
-    "            self.xA = np.array([self.random()])\n",
-    "            self.xB = np.array([self.random()])\n",
-    "        \n",
-    "\n",
-    "    def run(self,steps = None):\n",
-    "        self.reset()\n",
-    "        if steps is None:\n",
-    "            steps = self.default_steps\n",
-    "            \n",
-    "        for i in np.arange(steps):\n",
-    "            self.step()\n",
-    "        return self.xA, self.xB\n",
-    "\n",
-    "        \n",
-    "    def rotation(self,angle):\n",
-    "        return np.array([[np.cos(2*np.pi*angle),np.sin(2*np.pi*angle)],[-np.sin(2*np.pi*angle),np.cos(2*np.pi*angle)]],dtype=np.float)\n",
-    "\n",
-    "\n",
-    "    def interval(self,value,minval = 0,maxval = 1):\n",
-    "        step = maxval - minval\n",
-    "        cval = value\n",
-    "        while cval < minval:cval += step\n",
-    "        while cval > maxval:cval -= step\n",
-    "        return cval\n",
-    "\n",
-    "\n",
-    "    def projection(self,x, alphaangle = None):\n",
-    "        if alphaangle is None:  alphavec = self.alpha\n",
-    "        else:                   alphavec = np.dot(self.rotation(alphaangle),self.__A_eigvec[0])\n",
-    "        \n",
-    "        alphavec = alphavec/np.linalg.norm(alphavec)\n",
-    "        return np.dot(alphavec,x)\n",
-    "    \n",
-    "    \n",
-    "    def output(self,step = None,alphaangle = None):\n",
-    "        if step is None:    step = -1\n",
-    "        else:               step = np.max([0,np.min([len(self.xA)-1,step])])\n",
-    "        return self.projection(self.xA[step],alphaangle), self.projection(self.xB[step],alphaangle)\n",
-    "\n",
-    "\n",
-    "    def output_all(self,alphaangle = None):\n",
-    "        return np.array([self.output(step = i,alphaangle = alphaangle) for i in range(len(self))]).T\n",
-    "    \n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        assert len(self.xA) == len(self.xB)\n",
-    "        return len(self.xA)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd56a05c7307438faac8e00e1f2caef9",
+       "model_id": "0c8044d6ce554180bd7287f8302bb914",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +46,7 @@
     "colors =[['fcaf3e','ce5c00'],['729fcf','204a87'],['8ae234','4e9a06'],['fce94f','c4a000'], ['ad7fa8','5c3566'],['ef2929','a40000'],['e9b96e','8f5902']]\n",
     "@interact\n",
     "def InteractiveWindow(numproc = (1,10,1), lambda1 = (0,1.), lambda2 = (0,1.), Aangle = (0,1.), alpha = (0,1.), noise1 = (0,2.), noise2 = (0,2.), experimenttype = ['sisters','nonsisters','control']):\n",
-    "    p = [MDARP(eigval = [lambda1,lambda2], A_angle = Aangle, noiseamplitudes = [noise1,noise2], alpha_angle = alpha, experimenttype = experimenttype, steps = generations) for i in range(numproc)]\n",
+    "    p = [arpc.ARP(eigval = [lambda1,lambda2], A_angle = Aangle, noiseamplitudes = [noise1,noise2], alpha_angle = alpha, experimenttype = experimenttype, steps = generations) for i in range(numproc)]\n",
     "    for i in range(numproc):\n",
     "        p[i].run()\n",
     "        traj = p[i].output_all()\n",
@@ -170,9 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57bc2aef1e92451297a62f34cc7289dc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=100, description='numproc', max=200, step=10), FloatSlider(value=0.5, de…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def InteractiveWindow(numproc = (0,200,10), lambda1 = (0,1.), lambda2 = (0,1.), Aangle = (0,1.), alpha = (0,1.), noise1 = (0,2.), noise2 = (0,2.), yzoom=(0,10,1)):\n",
