checks for analytics

--- a/ARP_analysis.ipynb
+++ b/ARP_analysis.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c8044d6ce554180bd7287f8302bb914",
+       "model_id": "8aaf3d5b1aec46bf8e1f174f6db74f73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57bc2aef1e92451297a62f34cc7289dc",
+       "model_id": "a29d93eaa8e641e6837f11b7ef172c1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +78,7 @@
     "@interact\n",
     "def InteractiveWindow(numproc = (0,200,10), lambda1 = (0,1.), lambda2 = (0,1.), Aangle = (0,1.), alpha = (0,1.), noise1 = (0,2.), noise2 = (0,2.), yzoom=(0,10,1)):\n",
     "    for experimenttype in  ['sisters','nonsisters','control']:\n",
-    "        p = [MDARP(eigval = [lambda1,lambda2], A_angle = Aangle, noiseamplitudes = [noise1,noise2], alpha_angle = alpha, experimenttype = experimenttype, steps = generations) for i in range(numproc)]\n",
+    "        p = [arpc.ARP(eigval = [lambda1,lambda2], A_angle = Aangle, noiseamplitudes = [noise1,noise2], alpha_angle = alpha, experimenttype = experimenttype, steps = generations) for i in range(numproc)]\n",
     "        sum_dt2 = np.zeros(generations+1)\n",
     "        for i in range(numproc):\n",
     "            p[i].run()\n",
@@ -95,8 +95,10 @@
     "            #sum_dt2 += np.array([np.sum((traj[0][:j]-traj[1][:j])**2) for j in range(generations+1)])\n",
     "\n",
     "        plt.plot(g,np.var(all_dt,axis = 0))\n",
+    "        analytic_variance = p[i].VarianceDifferenceProjection(generation = generations)\n",
+    "        plt.plot(g,analytic_variance)\n",
     "    plt.ylim((0,10**yzoom))\n",
-    "    plt.legend( ['sisters','nonsisters','control'])\n",
+    "    plt.legend( ['sisters','sisters analytics','nonsisters','nonsisters analyitics','control','control analytics'])\n",
     "    \n",
     "    \n",
     "    \n",
